test/reductions/bradc/manual/threeclasstypes-construct.good
threeclasstypes-construct.chpl:18: error: constructor for class 'mysumreduce' requires a generic argument called 'intype'
threeclasstypes-construct.chpl:18: error: constructor for class 'mysumreduce' requires a generic argument called 'statetype'
threeclasstypes-construct.chpl:18: error: constructor for class 'mysumreduce' requires a generic argument called 'outtype'
